@@ -25,6 +25,8 @@ of the original project, allowing to develop other classes nearby later.
 It is published to PyPI repository as
 link:https://pypi.org/project/PyNUTClient/[PyNUTClient]
 and so should be installable with `pip` tooling.
+Note that the file name of the distribution tarball is lower-cased per
+PEP-0625 requirements, while the module name is camel-cased historically.
 
 Currently the module is regularly tested to work with Python interpreter
 versions 2.7, 3.4, 3.5 and 3.7.
