@@ -522,6 +522,11 @@ relocated into new `shutdown.default` INSTCMD definitions. [#2670]
    module in the build or execution environment (deprecated in Python 3.11,
    removed since Python 3.13). [#2183]
 
+ - the PyPI distribution of the `PyNUTClient` module tarball should now use a
+   lower-cased file name (and immediate versioned directory name inside) to
+   match the requirements of link:https://peps.python.org/pep-0625/[PEP-0625].
+   The Python module name (and its directory) should remain camel-cased. [#2773]
+
  - enabled installation of built single-file PDF and HTML (including man page
    renditions) under the configured `docdir`. It seems previously they were
    only built (if requested) but not installed via `make`, unlike the common
